# CppLearn

./: .gitignore  CMakeLists.txt  ReadMe.md  TODO.md  build.sh  conanfile.txt  main.cpp
data/: linear_regression_data.csv
include/core/: dataframe.hpp
include/model_selection/: train_test_split.hpp
include/models/: base_model.hpp  linear_regression.hpp
include/optimizer/: gradient_descent.hpp  newton_raphson.hpp  optimizer.hpp
src/core/: dataframe.cpp
src/model_selection/: train_test_split.cpp
src/models/: base_model.cpp  linear_regression.cpp
src/optimizer/: gradient_descent.cpp  newton_raphson.cpp  optimizer.cpp
tests/: test_linear_regression.cpp  test_newton_raphson.cpp
